allow USER_PASSWORD_AUTH

--- a/src/standard/cognito.yaml
+++ b/src/standard/cognito.yaml
@@ -46,6 +46,7 @@ Resources:
       GenerateSecret: true
       ExplicitAuthFlows:
         - ALLOW_USER_SRP_AUTH
+        - ALLOW_USER_PASSWORD_AUTH
         - ALLOW_REFRESH_TOKEN_AUTH
       AllowedOAuthFlows:
         - implicit
