add dynamodb tables

--- a/src/standard/api-gateway.yaml
+++ b/src/standard/api-gateway.yaml
@@ -35,7 +35,8 @@ Resources:
       IdentitySource: method.request.header.Authorization
       ProviderARNs:
         - Fn::ImportValue: !Sub "${CognitoStack}-CognitoUserPoolArn"
-      # IdentityValidationExpression: !Sub ".*${ApiGateway.RestApiId}.*"
+      IdentityValidationExpression:
+        Fn::ImportValue: !Sub "${CognitoStack}-CognitoUserPoolClientId"
 
   ###############################################
   # API Gateway Logging
