--- a/src/advanced/dynamodb-tables.yaml
+++ b/src/advanced/dynamodb-tables.yaml
@@ -15,10 +15,8 @@ Mappings:
   Tables:
     Product:
       TableName: "Product"
-      PartitionKey: "parentSkuId"
+      PartitionKey: "skuId"
       PartitionKeyType: "S"
-      SortKey: "skuId"
-      SortKeyType: "S"
       FirstGsiPartitionKey: "category"
       FirstGsiPartitionKeyType: "S"
       FirstGsiSortKey: "type"
@@ -58,10 +56,6 @@ Resources:
           AttributeType:
             Fn::FindInMap: [Tables, Product, PartitionKeyType]
         - AttributeName:
-            Fn::FindInMap: [Tables, Product, SortKey]
-          AttributeType:
-            Fn::FindInMap: [Tables, Product, SortKeyType]
-        - AttributeName:
             Fn::FindInMap: [Tables, Product, FirstGsiPartitionKey]
           AttributeType:
             Fn::FindInMap: [Tables, Product, FirstGsiPartitionKeyType]
@@ -81,9 +75,6 @@ Resources:
         - AttributeName:
             Fn::FindInMap: [Tables, Product, PartitionKey]
           KeyType: HASH # Partition Key
-        - AttributeName:
-            Fn::FindInMap: [Tables, Product, SortKey]
-          KeyType: RANGE # Sort Key
       BillingMode: PAY_PER_REQUEST
       OnDemandThroughput:
         MaxReadRequestUnits: !Ref MaxReadCapacityUnits
