--- a/src/advanced/ecs-tasks.yaml
+++ b/src/advanced/ecs-tasks.yaml
@@ -53,11 +53,15 @@ Resources:
           Image: !Sub "${ImageRepository.RepositoryUri}:latest"
           Essential: true
           PortMappings:
-            - ContainerPort: 80
+            - Name: !Ref TaskFamily
+              ContainerPort: 80
               HostPort: 80
+              AppProtocol: "http"
               Protocol: "tcp"
-            - ContainerPort: 443
+            - Name: !Sub "${TaskFamily}-https"
+              ContainerPort: 443
               HostPort: 443
+              AppProtocol: "http"
               Protocol: "tcp"
           Environment:
             - Name: "ENVIRONMENT"
