--- a/src/advanced/dynamodb-tables.yaml
+++ b/src/advanced/dynamodb-tables.yaml
@@ -30,11 +30,9 @@ Mappings:
       PartitionKey: "stockCode"
       PartitionKeyType: "S"
     PromotionCode:
-      TableName: "PromotionCode"
+      TableName: "PromotionCodeV2"
       PartitionKey: "code"
       PartitionKeyType: "S"
-      SortKey: "availableFrom"
-      SortKeyType: "N"
     PromotionRule:
       TableName: "PromotionRule"
       PartitionKey: "name"
@@ -144,17 +142,10 @@ Resources:
             Fn::FindInMap: [Tables, PromotionCode, PartitionKey]
           AttributeType:
             Fn::FindInMap: [Tables, PromotionCode, PartitionKeyType]
-        - AttributeName:
-            Fn::FindInMap: [Tables, PromotionCode, SortKey]
-          AttributeType:
-            Fn::FindInMap: [Tables, PromotionCode, SortKeyType]
       KeySchema:
         - AttributeName:
             Fn::FindInMap: [Tables, PromotionCode, PartitionKey]
           KeyType: HASH # Partition Key
-        - AttributeName:
-            Fn::FindInMap: [Tables, PromotionCode, SortKey]
-          KeyType: RANGE # Sort Key
       BillingMode: PAY_PER_REQUEST
       OnDemandThroughput:
         MaxReadRequestUnits: !Ref MaxReadCapacityUnits
